--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "aframework": "git+https://github.com/LeonTheBuilder/aframework.git",
     "user_service": "git+https://github.com/LeonTheBuilder/user_service.git",
     "ai_service": "git+https://github.com/LeonTheBuilder/ai_service.git",
-    "cheerio": "^1.1.0",
-    "puppeteer": "^24.10.0",
-    "vm2": "^3.9.19"
+    "message_service": "git+https://github.com/LeonTheBuilder/message_service.git"
   }
 }
