--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "newcrew",
-  "version": "1.0.0",
+  "name": "leonsagent",
+  "version": "1.0.1",
   "scripts": {
     "dev": "nodemon src/main.js",
     "prod": "nodemon src/main.js"
@@ -11,10 +11,11 @@
     "sequelize": "^6.37.7"
   },
   "dependencies": {
+    "account_service": "github:LeonTheBuilder/account_service",
     "aframework": "git+https://github.com/LeonTheBuilder/aframework.git",
-    "user_service": "git+https://github.com/LeonTheBuilder/user_service.git",
     "ai_service": "git+https://github.com/LeonTheBuilder/ai_service.git",
     "message_service": "git+https://github.com/LeonTheBuilder/message_service.git",
+    "user_service": "github:LeonTheBuilder/user_service",
     "web_resources": "git+https://github.com/LeonTheBuilder/web_resources.git"
   }
 }
